# privacy-glue

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/action/setup-poetry/: action.yml
.github/actions/setup-environment/: action.yml
.github/actions/setup-poetry/: action.yml
.github/workflows/: black.yml  build.yml  ci.yml  deploy.yml  flake8.yml  poetry-install.yml  pytest.yml  python-build.yml  python-deploy.yml  python-static.yml  python-style-lint.yml  python.yml  sh-checker.yml  shell-static.yml  shell-style-lint.yml  shell.yml  static.yml
data/: .gitignore
hooks/: pre-commit
notebooks/: inspect_predictions.ipynb  interpret_with_captum.ipynb  visualize_domain_embeddings.ipynb  visualize_domain_tsne.ipynb  visualize_results.ipynb
runs/: .gitignore
scripts/: prepare.sh  prepare_data.sh  prepare_git_hooks.sh  prepare_submodules.sh  run_privacy_glue.sh
src/: parser.py  privacy_glue.py  prototype_datasets.py  reading_comprehension.py  sequence_classification.py  sequence_tagging.py
src/datasets/: __init__.py  app_350.py  opp_115.py  piextract.py  policy_detection.py  policy_qa.py  privacy_qa.py
src/tasks/: app_350.py  opp_115.py  opt_out.py  piextract.py  policy_detection.py  policy_ie.py  policy_ie_a.py  policy_ie_b.py  policy_qa.py  privacy_qa.py
src/utils/: __init__.py  data_utils.py  experiment_utils.py  logging_utils.py  model_utils.py  parser_utils.py  pipeline_utils.py  task_utils.py  tasks_utils.py  trainer_utils.py
tests/: conftest.py  test_load_opp_115.py  test_load_piextract.py  test_load_policy_detection.py  test_load_policy_ie_a.py  test_load_policy_ie_b.py  test_load_policy_qa.py  test_load_privacy_qa.py  test_merge_ner_tags.py  test_parser.py  test_privacy_glue.py  test_read_conll_file.py  test_reading_comprehension.py  test_reproducibility.py  test_sequence_classification.py  test_sequence_tagging.py
tests/data/opp_115/: test_dataset.csv  train_dataset.csv  validation_dataset.csv
tests/data/piextract/CollectUse_false/: train.conll03  validation.conll03
tests/data/piextract/CollectUse_true/: train.conll03  validation.conll03
tests/data/piextract/Share_false/: train.conll03  validation.conll03
tests/data/piextract/Share_true/: train.conll03  validation.conll03
tests/data/policy_detection/: 1301_dataset.csv  split_ids.json
tests/data/policy_ie_a/test/: label  seq.in
tests/data/policy_ie_a/train/: label  seq.in
tests/data/policy_ie_a/valid/: label  seq.in
tests/data/policy_ie_b/test/: seq.in  seq_type_I.out  seq_type_II.out
tests/data/policy_ie_b/train/: seq.in  seq_type_I.out  seq_type_II.out
tests/data/policy_ie_b/valid/: seq.in  seq_type_I.out  seq_type_II.out
tests/data/policy_qa/: dev.json  test.json  train.json
tests/data/privacy_qa/: policy_test.tsv  policy_train.tsv
tests/tasks/: test_datasets_random_split.py  test_load_opp_115.py  test_load_piextract.py  test_load_policy_ie_a.py  test_load_policy_ie_b.py  test_load_policy_qa.py  test_merge_ner_tags.py  test_opp_115.py  test_piextract.py  test_policy_detection.py  test_policy_ie_a.py  test_policy_ie_b.py  test_policy_qa.py  test_privacy_qa.py  test_read_conll_file.py
tests/utils/: test_experiment_utils.py  test_logging_utils.py  test_model_utils.py  test_parser_utils.py  test_pipeline_utils.py  test_task_utils.py  test_trainer_utils.py
