[tool.poetry]
name = "privacy-glue"
version = "0.1.0"
description = ""
authors = ["Atreya Shankar <35427332+atreyasha@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.18.0"
tqdm = "^4.62.3"
numpy = "^1.21.4"
datasets = "^2.0.0"
torch = "1.10.0"
nltk = "^3.7"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
mypy = "0.960"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
black = "^22.6.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py38"]
quiet = true
extend-exclude = """
/(
  tests/data |
  submodules |
  scripts |
  runs |
  hooks |
  data |
  cov_html
)/
"""

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
exclude_lines = [
  "raise NotImplementedError",
  "if __name__ == \"__main__\":"
]
omit = ["src/parser.py", "src/utils/logging_utils.py", "src/utils/parser_utils.py"]
skip_empty = true

[tool.coverage.html]
directory = "cov_html"

[tool.pytest.ini_options]
addopts = "--cov=src"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
allow_redefinition = true
files = "src"

[[tool.mypy.overrides]]
module = [
    "ipdb",
    "tqdm.*",
    "pandas"
]
ignore_missing_imports = true
