[tool.poetry]
name = "privacy-glue"
version = "0.1.0"
description = ""
authors = ["Atreya Shankar <35427332+atreyasha@users.noreply.github.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "~3.8"
transformers = "^4.18.0"
tqdm = "^4.62.3"
numpy = "^1.21.4"
datasets = "^2.0.0"
torch = {url = "https://download.pytorch.org/whl/cu113/torch-1.12.1%2Bcu113-cp38-cp38-linux_x86_64.whl"}
nltk = "^3.7"
wandb = "^0.13.3"
evaluate = "^0.2.2"
scikit-learn = "^1.1.2"
seqeval = "^1.2.2"
plotnine = "^0.10.1"
jupyter = "^1.0.0"
scipy = "^1.9.3"
umap-learn = "^0.5.3"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.9"
mypy = "0.960"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
black = "^22.6.0"
flake8 = "^5.0.4"
shellcheck-py = "^0.8.0"
shfmt-py = "^3.4.3"
pytest-mock = "^3.8.2"
isort = "^5.10.1"
pytest-html = "^3.2.0"
nbqa = "^1.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py38"]
quiet = true
extend-exclude = """
/(
  tests/data |
  submodules |
  scripts |
  runs |
  data |
  coverage |
  .venv
)/
"""

[tool.isort]
profile = "black"
skip_glob = ["data/*", "runs/*", "scripts/*",
             "submodules/*", ".venv/*", "coverage/*"]
known_third_party = ["wandb"]
known_first_party = ["parser"]

[tool.nbqa.files]
black = "^notebooks/"
isort = "^notebooks/"
flake8 = "^notebooks/"

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == \"__main__\":",
  "raise AssertionError",
  "raise NotImplementedError",
  "@abstractmethod"
]
skip_empty = true

[tool.coverage.html]
directory = "coverage"

[tool.pytest.ini_options]
addopts = "--cov=src --basetemp=tests/artifacts"
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["slow: slow integration tests on multiple devices"]

[tool.mypy]
allow_redefinition = true
show_error_codes = true
files = "src"

[[tool.mypy.overrides]]
module = [
    "ipdb",
    "tqdm.*",
    "pandas"
]
ignore_missing_imports = true
